--- a/.github/workflows/test12.yml
+++ b/.github/workflows/test12.yml
@@ -2,7 +2,7 @@ name: workflow with pullrequest
 
 on:
   pull_request:
-    branches: [develop]
+    branches: [dpointworks-patch-10]
     # branches: [dummy]
 
 jobs:
